--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Êó±êĞü¸¡/ÎÄ×ÖÁ÷¹â</title>
+		<title>é¼ æ ‡æ‚¬æµ®/æ–‡å­—æµå…‰</title>
 		<style media="screen">
 			body{
 				background-color: #f8f8f8;
-				font-family: "Ó×Ô²";
+				font-family: "å¹¼åœ†";
 				font-weight: bold;
 			}
 			.wrap{
@@ -85,8 +85,8 @@
 			<div class="bg">
 			</div>
 			<div class="text">
-				<h2>»¶Ó­¿ªÊ¼Ç°¶ËÏîÄ¿Ö®Â·</h2>
-				<p>µã»÷¿ªÊ¼</p>
+				<h2>æ¬¢è¿å¼€å§‹å‰ç«¯é¡¹ç›®ä¹‹è·¯</h2>
+				<p>ç‚¹å‡»å¼€å§‹</p>
 			</div>
 		</div>
 
